--- a/src/templates/mustache/example.html
+++ b/src/templates/mustache/example.html
@@ -17,11 +17,44 @@
             'zip': '95014'
         },
         'product': ['MacBook', 'iPhone', 'iPad']
-    }
+    };
 
+    //{{}}就是 Mustache 的标示符，花括号里的 keyName 表示键名，这句的作用是直接输出与键名匹配的键值
     var tpl = '<h1>Hello {{company}}</h1>';
     var html = Mustache.render(tpl, data);
+    console.log(html);//<h1>Hello Apple</h1>
 
+
+    //以#开始、以/结束表示区块，它会根据当前上下文中的键值来对区块进行一次或多次渲染
+    var tpl2 = '{{#address}}<p>{{street}},{{city}},{{state}}</p> {{/address}}';
+    var html2 = Mustache.render(tpl2, data);
+    console.log(html2);//<p>I Loop,California,CA</p>
+
+    //该语法与{{#keyName}} {{/keyName}}类似，不同在于它是当 keyName 值为 null, undefined, false 时才渲染输出该区块内容
+    var tpl3 = '{{^nothing}}not found{{/nothing}}';
+    var html3 = Mustache.render(tpl3, data);
+    console.log(html3);//not found
+
+    //{{.}}表示枚举，可以循环输出整个数组
+    var tpl4 = '{{#product}}<p>{{.}}</p>{{/product}}';
+    var html4 = Mustache.render(tpl4, data);
+    console.log(html4);//<p>MacBook</p><p>iPhone</p><p>iPad</p>
+
+    //以>开始表示子模块，如{{> address}}；当结构比较复杂时，我们可以使用该语法将复杂的结构拆分成几个小的子模块
+    var tpl5 = '<h1>{{company}}<h1><ul>{{>address}}</ul></h1>';
+    var partials = {
+        address: "{{#address}}<li>{{street}}</li><li>{{city}}</li><li>{{state}}</li><li>{{zip}}</li>{{/address}}"
+    };
+    var html5 = Mustache.render(tpl5, data, partials);
+    console.log(html5);//<h1>Apple<h1><ul><li>I Loop</li><li>California</li><li>CA</li><li>95014</li></ul></h1>
+
+    //{{keyName}}输出会将等特殊字符转译，如果想保持内容原样输出可以使用{{{}}}
+    var tpl6 = '{{#address}}<p>{{{street}}}</p>{{/address}}'
+    var html6 = Mustache.render(tpl6, data);
+    console.log(html6);//<p>I Loop</p>
+
+    var tpl7 = '{{!注释}}';
+    console.log(Mustache.render(tpl7));//
 
 </script>
 
