--- a/src/test/blog/main.css
+++ b/src/test/blog/main.css
@@ -41,6 +41,7 @@ nav ul {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    overflow: hidden;
 }
 
 .hr {
@@ -264,6 +265,54 @@ footer .share-group li {
 
 footer .copyright {
     padding-bottom: 20px;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: -300px;
+    bottom: 0;
+    width: 300px;
+    background: #333333;
+    color: white;
+    padding: 20px 0;
+    transition: right 0.5s;
+}
+
+.sidebar ul {
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar ul a {
+    width: 100%;
+    text-decoration: none;
+    color: white;
+    padding: 10px 30px;
+    display: inline-block;
+}
+
+.sidebar ul a:hover {
+    background-color: #999999;
+
+}
+
+.mask {
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.back-to-top {
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    border: 1px solid white;
 }
 
 
