--- a/src/interview/是什么阻塞了dom/style.css
+++ b/src/interview/是什么阻塞了dom/style.css
@@ -1,3 +1,19 @@
 body {
-    color: #a2ca4a;
+    font-size: 16px
+}
+
+p {
+    font-weight: bold
+}
+
+span {
+    color: red
+}
+
+p span {
+    display: none
+}
+
+img {
+    float: right
 }
